# bioTaskBench

./: .gitignore  README.md  pyproject.toml
harness/: README.md  __init__.py  cli.py  config.py  data_manager.py  grader.py  reporter.py  runner.py  schemas.py  stability.py
harness/adapters/: __init__.py  bioagent_bench.py  biocoder.py  bixbench.py
harness/environments/: base.Dockerfile  domain_deps.yaml
mock_outputs/assembly-001/: assembly_stats.tsv
mock_outputs/assembly-002/: joins.tsv
mock_outputs/assembly-003/: errors.tsv
mock_outputs/chipseq-001/: peaks.bed
mock_outputs/chipseq-002/: motifs.tsv
mock_outputs/chipseq-003/: annotations.tsv
mock_outputs/chipseq-004/: differential.tsv
mock_outputs/crispr-001/: guide_summary.tsv
mock_outputs/crispr-002/: essential_genes.tsv
scripts/: extract_skill_usage.py  run_claude.py  run_codex.py  run_phase4_calibration.sh  run_phase5_baselines.sh
tests_harness/: test_adapters.py  test_assembly_golden_integration.py  test_audit_fixes.py  test_bixbench_integration.py  test_chipseq_005_grading.py  test_chipseq_golden_integration.py  test_crispr_golden_integration.py  test_data_manager.py  test_grader_core.py  test_longread_golden_integration.py  test_metabolomics_golden_integration.py  test_methylation_golden_integration.py  test_multiomics_golden_integration.py  test_population_golden_integration.py  test_proteomics_golden_integration.py  test_reporter.py  test_run_claude.py  test_run_codex.py  test_runner_cli_smoke.py  test_schemas.py  test_set_overlap.py  test_spatial_golden_integration.py  test_stability.py
(+160 files in other folders)
